--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
@@ -44,6 +45,6 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "interactjs": "^1.3.3"
+    "prop-types": "^15.6.1"
   }
 }
