--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
       "react/sort-comp": "off",
       "react/require-default-props": "warn",
       "jsx-a11y/no-static-element-interactions": "off",
-      "import/no-extraneous-dependencies": "off"
+      "import/no-extraneous-dependencies": "off",
+      "no-plusplus": "off"
   }
 }
