--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,12 @@
       "react/jsx-filename-extension": "off",
       "no-return-assign": "off",
       "react/sort-comp": "off",
+      "react/no-multi-comp": "off",
       "react/require-default-props": "warn",
+      "react/no-array-index-key": "off",
       "jsx-a11y/no-static-element-interactions": "off",
+      "jsx-a11y/no-noninteractive-element-interactions": "off",
+      "jsx-a11y/click-events-have-key-events": "off",
       "import/no-extraneous-dependencies": "off",
       "no-plusplus": "off"
   }
